--- a/v2/patrodent/templates/templates/inc.servicios.html
+++ b/v2/patrodent/templates/templates/inc.servicios.html
@@ -7,12 +7,12 @@
 {% url template_view "estetica" as estetica_url %}
 {% url template_view "atm" as atm_url %}
 {% url template_view "radiologia" as radiologia_url %}
-<li><a href="{{ ortodoncia_url }}" {% ifequal ortodoncia_url full_path %} class="active"{% endifequal %}>Ortodoncia</a></li>
-<li><a href="{{ odontologia_url }}" {% ifequal odontologia_url full_path %} class="active"{% endifequal %}>Odontología General - Endodoncia</a></li>
-<li><a href="{{ odontopediatria_url }}" {% ifequal odontopediatria_url full_path %} class="active"{% endifequal %}>Odontopediatría</a></li>
-<li><a href="{{ periodoncia_url }}" {% ifequal periodoncia_url full_path %} class="active"{% endifequal %}>Periodoncia</a></li>
-<li><a href="{{ implantes_url }}" {% ifequal implantes_url full_path %} class="active"{% endifequal %}>Implantes</a></li>
-<li><a href="{{ protesis_url }}" {% ifequal protesis_url full_path %} class="active"{% endifequal %}>Prótesis</a></li>
-<li><a href="{{ estetica_url }}" {% ifequal estetica_url full_path %} class="active"{% endifequal %}>Estética dental y blanqueamiento</a></li>
-<li><a href="{{ atm_url }}" {% ifequal atm_url full_path %} class="active"{% endifequal %}>Problemas de articulación (ATM)</a></li>
-<li><a href="{{ radiologia_url }}" {% ifequal radiologia_url full_path %} class="active"{% endifequal %}>Radiología digital</a></li>
+<li><a href="{{ ortodoncia_url }}" {% ifequal ortodoncia_url full_path %} class="active"{% endifequal %}><i></i>Ortodoncia</a></li>
+<li><a href="{{ odontologia_url }}" {% ifequal odontologia_url full_path %} class="active"{% endifequal %}><i></i>Odontología General - Endodoncia</a></li>
+<li><a href="{{ odontopediatria_url }}" {% ifequal odontopediatria_url full_path %} class="active"{% endifequal %}><i></i>Odontopediatría</a></li>
+<li><a href="{{ periodoncia_url }}" {% ifequal periodoncia_url full_path %} class="active"{% endifequal %}><i></i>Periodoncia</a></li>
+<li><a href="{{ implantes_url }}" {% ifequal implantes_url full_path %} class="active"{% endifequal %}><i></i>Implantes</a></li>
+<li><a href="{{ protesis_url }}" {% ifequal protesis_url full_path %} class="active"{% endifequal %}><i></i>Prótesis</a></li>
+<li><a href="{{ estetica_url }}" {% ifequal estetica_url full_path %} class="active"{% endifequal %}><i></i>Estética dental y blanqueamiento</a></li>
+<li><a href="{{ atm_url }}" {% ifequal atm_url full_path %} class="active"{% endifequal %}><i></i>Problemas de articulación (ATM)</a></li>
+<li><a href="{{ radiologia_url }}" {% ifequal radiologia_url full_path %} class="active"{% endifequal %}><i></i>Radiología digital</a></li>
