--- a/v2/patrodent/templates/templates/servicio.html
+++ b/v2/patrodent/templates/templates/servicio.html
@@ -25,7 +25,7 @@
                 <div class="wrapper">
                     <div class="alpha grid_23">
                         <div class="indent-l">
-                            <div class="border">
+                            <div>
                                 <div class="title"><a href="{% url template_view "servicios" %}">Servicios</a></div>
                                 <ul class="list-1 columns3">
                                     {% include "templates/inc.servicios.html" %}
