--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -17,15 +17,14 @@
                 <h2>Clínica Dental Patrodent</h2>
                 <h3 class="p2">Bienvenidos a tu clinica</h3>
                 <p class="text-1 text-left-index">
-                    La clínica dental de la Dra. Patrocinio Gómez Martínez es una consulta de odontología integral, que le permitirá resolver todos los problemas de salud y estética buco-dental de una manera sencilla cómoda y eficaz.
+                    La Clínica Dental Patrodent es una consulta de odontología integral, que le permitirá resolver todos los problemas de salud y estética buco-dental de una manera sencilla, cómoda y eficaz.
                 </p>
                 <p class="text-1 text-left-index">
-                    Te ofrecemos todas las especialidades de la odontología moderna: Odontología conservadora y preventiva, ortodoncia, periodoncia, endodoncia,  prótesis, estética dental, blanqueamiento, cirugía e implantología, odontopediatría y radiología digital. 
+                    Ofrece todo tipo de especialidades con un personal altamente cualificado: Odontología general, Estética dental y Blanqueamiento, Ortodoncia, Odontopediatría, Periodoncia, Endodoncia, Cirugía oral e Implantología, Prótesis dental y Rehabilitación implantoprotésica.
                 </p>
                 <p class="text-1 text-left-index">
                     Ven y confía en nosotros
                 </p>
-                <p class="sign">Patrocinio Gomez Martinez</p>
             </div>
             <div class="grid_14 omega">
                 <div class="slider-wrapper">
@@ -33,6 +32,7 @@
                         <ul class="items">
                             <li><img src="{{ STATIC_URL }}images/logo_galeria.png" alt=""></li>
                             <li><img src="{{ STATIC_URL }}images/patrocinio_limpiando.jpg" alt=""></li>
+                            <li><img src="{{ STATIC_URL }}images/equipo.jpg" alt=""></li>
                             <li><img src="{{ STATIC_URL }}images/equipo_operando.jpg" alt=""></li>
                             <li><img src="{{ STATIC_URL }}images/sala_de_esperas.jpg" alt=""></li>
                             <li><img src="{{ STATIC_URL }}images/recepcion_con_personal.jpg" alt=""></li>
@@ -43,6 +43,7 @@
                             <li><a href="#"><span>3</span></a></li>
                             <li><a href="#"><span>4</span></a></li>
                             <li><a href="#"><span>5</span></a></li>
+                            <li><a href="#"><span>6</span></a></li>
                         </ul>
                     </div>
                 </div>
