--- a/v2/patrodent/templates/templates/base.html
+++ b/v2/patrodent/templates/templates/base.html
@@ -32,6 +32,10 @@
         (function($){
             $(document).ready(function () {
                 var padlock = false;
+                if (navigator.userAgent.indexOf("Mobile") === -1) {
+                    $(".noLinkWhatsapp a").removeAttr("href", "");
+                    $(".hideWhatsapp a").remove();
+                }
                 $("h1").mouseenter(function() {
                     if (!padlock) {
                         padlock = true;
@@ -109,10 +113,10 @@
         <a href="#" id="pull">Menu</a>
         <ul class="responsiveNav">
             <li class="index">
-                <a href="{% url template_view "index" %}" class="{% block class-patrodent-link2 %}{% endblock %}">Patrodent</a>
+                <a href="{% url template_view "index" %}" class="{% block class-patrodent-link2 %}{% endblock %}">Clínica</a>
                 <ul>
                     <li class="whoWeAre"><a href="{% url template_view "quienes_somos" %}">Quienes somos</a></li>
-                    <li class="who"><a href="{% url template_view "quien_soy" %}">Quien Soy</a></li>
+                    <li class="KnowUs"><a href="{% url template_view "conocenos" %}">Conocenos</a></li>
                     <li class="Place"><a href="{% url template_view "instalaciones" %}">Instalaciones</a></li>
                 </ul>
             </li>
@@ -126,6 +130,9 @@
             <li class="contact">
                 <a href="{% url template_view "contacto" %}" class="{% block class-contacto-link2 %}{% endblock %}">Contacto</a>
                 <ul>
+                    <li class="hideWhatsapp">
+                        <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
+                    </li>
                     <li>
                         <a href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
                     </li>
@@ -146,6 +153,7 @@
                     <div class="fright">
                         <div class="slogon">
                             <div class="tel">Llamanos <span><a href="tel:954 21 14 22">954 21 14 22</a></span></div>
+                            <div class="whats noLinkWhatsapp">...o escribenos un <span><a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta">Whatsapp</a></span></div>
                             Estamos disponibles de 9 a 21 horas
                         </div>
                         <div class="clear"></div>
@@ -153,10 +161,10 @@
                             {% block nav %}
                                 <ul class="menu">
                                     <li>
-                                        <a href="{% url template_view "index" %}" class="{% block class-patrodent-link %}{% endblock %}">Patrodent</a>
+                                        <a href="{% url template_view "index" %}" class="{% block class-patrodent-link %}{% endblock %}">Clínica</a>
                                         <ul>
                                             <li><a href="{% url template_view "quienes_somos" %}">Quienes somos</a></li>
-                                            <li><a href="{% url template_view "quien_soy" %}">Quien Soy</a></li>
+                                            <li class="KnowUs"><a href="{% url template_view "conocenos" %}">Conocenos</a></li>
                                             <li><a href="{% url template_view "instalaciones" %}">Instalaciones</a></li>
                                         </ul>
                                     </li>
@@ -166,10 +174,19 @@
                                             {% include "templates/inc.servicios.html" %}
                                         </ul>
                                     </li>
+                                    <li>
+                                        <a href="{% url template_view "tratamientos" %}" class="{% block class-tratamientos-link %}{% endblock %}">Tratamientos</a>
+                                        <ul style="width:250px">
+                                            {% include "templates/inc.servicios.html" %}
+                                        </ul>
+                                    </li>
                                     <li><a href="{% url template_view "antes_y_despues" %}" class="{% block class-antes-despues-link %}{% endblock %}">Antes y despues</a></li>
                                     <li>
                                         <a href="{% url template_view "contacto" %}" class="{% block class-contacto-link %}{% endblock %}">Contacto</a>
                                         <ul>
+                                            <li class="hideWhatsapp">
+                                                <a href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta" target="_blank">Whatsapp</a>
+                                            </li>
                                             <li>
                                                 <a href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">Facebook</a>
                                             </li>
@@ -252,6 +269,7 @@
                                     <dt>Marqués de Paradas 22 1 º dcha<br/>41001 Sevilla</dt>
                                     <dd><span>E-mail:</span><a class="link" href="mailto:info@patrodent.com">info@patrodent.com</a></dd>
                                     <dd><span>Teléfono:</span><a class="link" href="tel:954 21 14 22">954 21 14 22</a></dd>
+                                    <dd class="noLinkWhatsapp"><span>WhatsApp:</span><a class="link" href="https://api.whatsapp.com/send?phone=+34954211422&text=Hola%20me%20gustaría%20hacerle%20una%20consulta" target="_blank">954 21 14 22</a></dd>
                                     <dd><span>Facebook:</span><a class="link" href="http://es-es.facebook.com/patrodent.patrodent" target="_blank">patrodent.patrodent</a></dd>
                                 </dl>
                             </div>
